bugfix auto generate monitor name error when add monitor (#1384)
Signed-off-by: tomsun28 <tomsun28@outlook.com>